Add options: { transport: '' } ro registration endpoint
